# SamsScaleHouse

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  index.html  main.js  main.js.old  main.py  package-lock.json  package.json  preload.js  pyproject.toml  renderer.js  renderer_standalone.js  scale-settings.js
.github/agents/: my-agent.agent.md
.github/workflows/: build-and-attest.yml
SamsScaleHouse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scalehouse/: __init__.py  audit.py  models.py  pos.py  scale.py  scrap_sort_ai.py
tests/: __init__.py  test_audit.py  test_models.py  test_pos.py  test_scale.py  test_scrap_sort_ai.py
